@@ -46,6 +46,7 @@ Viaklix Gateway (Sep 3, 2007)
 Braintree Gateway (Sep 4, 2007)
 
 * Originally contributed by Michael J. Mangino
+* Portions of the BrainTree gateway by Jeremy Voorhis
 
 Concord Efsnet Gateway (Sep 7, 2007)
 
