@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Add support for echecks to the BrainTree gateway [Jeremy Voorhis]
+#
 # * Fix before_validate and validate methods in CreditCard [rick.denatale]
 #
 # * Add support for Netbilling payment gateway [cody]
